# llm-semantic-dataset-sorter

./: .gitignore  Cargo.toml  GLOSSARY.md  README.md  potential-use-cases.md  why-this-matters.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: 00-product-plan.md  01-architecture-plan.md  02-schema-plan.md  03-mvp-plan.md  04-parquet-lane-plan.md  05-user-manual.md  06-operations-and-cleanup.md  07-release-checklist.md
examples/: sample_dataset.jsonl
input-datasets/: semantic-sample.parquet
input-datasets/demo-mixed/: 001-rust.txt  002-parser.txt  003-reasoning.txt  004-abstract.txt  005-ops.txt
ui/: README.md  app.js  index.html  styles.css
