[workspace]
members = [
  "crates/core",
  "crates/pipeline",
  "crates/llm",
  "crates/storage",
  "crates/server",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
arrow-array = "54"
arrow-schema = "54"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
parquet = "54"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "signal", "fs", "time"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
